# MIDA

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  development-plan.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build.yml  ci.yml  deploy-model.yml  deploy.yml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_tool_settings.py
backend/app/: main.py
backend/app/api/v1/: inference.py  models.py  studies.py  tasks.py  tool_settings.py
backend/app/api/ws/: tasks.py
backend/app/core/: config.py  database.py  dependencies.py  weight_loader.py
backend/app/models/: __init__.py  inference_result.py  study.py  tool_setting.py
backend/app/modules/dicom/: __init__.py  service.py  types.py
backend/app/modules/explainability/: __init__.py  base.py  gradcam.py
backend/app/modules/inference/: __init__.py  base.py  onnx_impl.py  pytorch_impl.py
backend/app/modules/ml_tools/: __init__.py  base.py  registry.py  settings.py
backend/app/modules/ml_tools/chexpert/: tool.py
backend/app/modules/ml_tools/pneumonia/: tool.py
backend/app/modules/model_store/: service.py
backend/app/modules/postprocessing/: __init__.py  pipeline.py
backend/app/modules/preprocessing/: __init__.py  pipeline.py
backend/app/modules/storage/: service.py
backend/app/services/: inference_service.py  study_service.py  tool_settings_service.py
backend/app/workers/: celery_app.py  tasks.py
backend/ml/: README.md  sanity_check.py
backend/ml/configs/: baseline_efficientnet_b0.yaml  baseline_resnet50.yaml  chexpert_densenet121.yaml  cv_rsna_densenet121_384.yaml  finetune_rsna_densenet121_384.yaml  pretrain_nih_densenet121.yaml  splits_rsna_v1.json
backend/ml/export/: export_onnx.py  patch_int8_metadata.py  quantize_int8.py
backend/ml/notebooks/: eda_rsna.ipynb
backend/ml/training/: chexpert_dataset.py  cv_train.py  datasets.py  ensemble_eval.py  eval.py  eval_chexpert.py  fetch_rsna.py  make_splits.py  metrics.py  model.py  nih_dataset.py  pretrain_nih.py  train_baseline.py  train_chexpert.py  transforms.py
backend/tests/: test_datasets.py  test_dicom.py  test_ensemble_eval.py  test_eval.py  test_explainability.py  test_inference.py  test_metrics.py  test_ml_tools.py  test_model_store.py  test_nih_dataset.py  test_onnx_export.py  test_pneumonia_tool.py  test_postprocessing.py  test_preprocessing.py  test_splits.py  test_stack.py  test_tool_settings.py  test_train_baseline.py
backend/tests/api/: conftest.py  test_inference.py  test_models.py  test_studies.py  test_tool_settings.py
frontend/: .gitignore  .prettierignore  eslint.config.js  index.html  openapi.json  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/scripts/: generate-api.sh
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: index.ts
frontend/src/api/models/: Body_upload_study_api_v1_studies_post.ts  InferenceRequest.ts  InferenceResultPublic.ts  InferenceSubmitResponse.ts  ModelListItem.ts  StudyPublic.ts  TaskStatusResponse.ts  ToolSettingsConfig.ts
frontend/src/api/services/: HealthService.ts  InferenceService.ts  ModelsService.ts  StudiesService.ts  TasksService.ts  ToolsService.ts
frontend/src/components/: InferencePanel.tsx  Layout.tsx  MetadataPanel.tsx  ResultCard.tsx  StudyViewer.tsx
frontend/src/components/ui/: button.tsx
frontend/src/hooks/: useInference.ts  useStudies.ts  useStudyImage.ts  useToolSettings.ts
frontend/src/lib/: apiConfig.ts  errors.ts
frontend/src/pages/: HistoryPage.tsx  NotFoundPage.tsx  SettingsPage.tsx  StudyPage.tsx  UploadPage.tsx
frontend/src/test/: HistoryPage.test.tsx  Layout.test.tsx  MetadataPanel.test.tsx  ResultCard.test.tsx  SettingsPage.test.tsx  StudyViewer.test.tsx  UploadPage.test.tsx
infra/: .env.prod.example  docker-compose.dev.yml  docker-compose.minio.yml  docker-compose.prod.yml
infra/caddy/: mida.caddy
infra/docker/: backend.Dockerfile  frontend.Dockerfile
